Alignment issue fix

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -26,6 +26,7 @@ input[type=text] {
     box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
+    background-position: 100% 0px;
 }
 
 .header__link--button {
